# llm-pdf

./: Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
llmpdf/: ai.py  db.py  download.py  llmpdf.py  main.py  util.py
tests/: test_llmpdf.py  test_util.py
