[tool.poetry]
name = "llm-pdf-chat"
version = "0.4.0"
description = "Talk to your PDFs using an LLM."
authors = ["Rushabh Doshi <radoshi+pypi@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "llmpdf" }]
homepage = "https://github.com/radoshi/llm-pdf"
repository = "https://github.com/radoshi/llm-pdf"
keywords = ["openai", "llm", "cli", "pdf"]
classifiers = ["Development Status :: 3 - Alpha", "Environment :: Console"]
include = ["prompts/**/*.toml"]

[tool.poetry.scripts]
llm-pdf = "llmpdf.main:main"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.6"
click = "^8.1.3"
rich = "^13.3.5"
tomli = "^2.0.1"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
chromadb = "^0.4.13"
pypdf = "^3.16.2"
tiktoken = "^0.5.1"
arxiv = "^1.4.8"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.269"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
